--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.3",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.2.45",
+    "webpack": "^5.72.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
